# Ultimate-fungi-battle

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/assets/: cards.json
src/assets/levels/: default_level.json
src/game/: __init__.py  ai.py  card.py  card_loader.py  deck.py  effects.py  engine.py  levels.py  save.py  state.py
src/tests/: test_ai.py  test_card.py  test_card_loader.py  test_deck.py  test_effects.py  test_engine.py  test_levels.py  test_levels_progression.py  test_responsive.py  test_state.py  test_touch.py  test_ui_render.py
src/ui/: animations.py  input_handler.py  renderer.py  textual_app.py
