[tool.poetry]
name = "ultimate-fungi-battle"
version = "0.1.0"
description = "Карточная roguelike-игра в терминале — каркас проекта"
authors = ["Автор <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
rich = "^13.0.0"
textual = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
